# mlsuite

./: .env  .env.example  .gitignore  ABCDEF.ts  AGENTS.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  habiba.ts  mimosa.ts  pom.xml  testing.jsonl
.codex/: hooks.json
api/: AGENTS.md  (+2 more)
backend/: .dockerignore  AGENTS.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/mlsuite_backend/: __init__.py  __main__.py  app.py  config.py  main.py
backend/src/mlsuite_backend/model_adapters/: __init__.py  base.py  features.py  registry.py  sklearn.py  xgboost.py
backend/src/mlsuite_backend/routers/: artifact.py  explain.py  metadata.py  predict.py  schema.py
backend/src/mlsuite_backend/schemas/: __init__.py  requests.py  responses.py
backend/src/mlsuite_backend/services/: artifact_service.py  explanation_service.py  model_service.py  prediction_service.py  schema_service.py
backend/src/mlsuite_backend/utils/: coercion.py  crystal_tree.py  dataframe.py  errors.py  uploads.py
backend/tests/: __init__.py  helpers.py  test_artifact_api.py  test_runtime_api.py  test_schema_api.py
ops-agent/: Dockerfile  README.md  pyproject.toml
ops-agent/src/mlsuite_ops_agent/: __init__.py  __main__.py  app.py  compose.py  config.py  metrics.py  models.py  state.py  terminal.py
ops-agent/src/mlsuite_ops_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ops-agent/tests/: test_ops_api.py  test_ops_terminal.py
(+1723 files in other folders)
