[project]
name = "backend"
version = "0.1.0"
description = "ML Suite Backend API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.120.3",
    "uvicorn[standard]>=0.38.0",
    "joblib>=1.5.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "mlschema>=0.1.2",
    "python-multipart>=0.0.6",
]
